# multilateration_visualizer

./: README.md
doc/system_diagram/: planttext.com.txt
electron/: .gitattributes  .gitignore  README.md  package-lock.json  package.json
electron/assets/: README.md  convert_to_ico.py
electron/release/app/: package-lock.json  package.json
electron/src/main/: main.ts  preload.ts
electron/src/main/src/: MyApp.ts
electron/src/main/src/rpc/: emitNotification.ts
electron/src/renderer/: App.tsx  index.ejs  index.tsx
electron/src/renderer/src/Context/: FrameData.context.tsx
electron/src/renderer/src/hooks/: useGrpcEventHandlers.hook.ts
electron/src/renderer/src/pages/: Main.page.tsx
electron/src/renderer/src/rpc/: handleNotification.ts  invokeRpc.ts
electron/src/shared/src/: .gitignore
electron/src/shared/src/ipc/: clientToServer.ts  serverToClient.ts
electron/src/shared/src/util/: assertTypeEquivalence.ts
protobuf/: compile_ts_proto.bat  unzip.bat
protobuf/proto/: grpc_api.proto  serial_api.proto
protobuf/rust_microservice/: Cargo.toml  README.md  build.rs  compile.bat
protobuf/rust_microservice/.cargo/: config.toml
protobuf/rust_microservice/resources/: compile_rc_file.bat  resource.lib  resource.rc
protobuf/rust_microservice/src/: main.rs
protobuf/rust_microservice/src/algorithm/: mod.rs
protobuf/rust_microservice/src/filter_voxels/: mod.rs
protobuf/rust_microservice/src/simulation/: mod.rs
release/vs_msvc_perf_profiler_source_map/: C_Users_user_.rustup_toolchains_stable-x86_64-pc-windows-msvc_lib_rustlib_src_rust.7z  src.7z
(+1 files in other folders)
