[package]
name = "grpc_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
mpsc = "0.2.3"
tokio-stream = "0.1.14"
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
rand_chacha = "0.3.1"

[build-dependencies]
tonic-build = "0.10.2"
